--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daphnée Nostrome | Digital Transformation Consultant</title>
+    <title>Daphnée Nostrome</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -467,7 +467,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <section id="about" class="about">
         <div class="section-bg"></div>
         <div class="container">
             <h2 class="section-title">About Me</h2>
@@ -482,7 +482,7 @@
         </div>
     </section>
 
-    <section class="services">
+    <section id="contact" class="services">
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
             <p class="section-subtitle">Ready to transform your organization's digital capabilities? Whether you're at a not-for-profit, private company, or government agency, let's discuss how I can help.</p>
