--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
         </div>
         <div class="container">
             <div class="hero-content">
-                <h1>Building Digital Futures That Include Everyone</h1>
-                <p>Empowering organizations and professionals at not-for-profits, in the private and public sectors to create inclusive, effective digital experiences through strategic innovation, learning and development, strategic communications, talent development, and comprehensive measurement frameworks.</p>
+                <h1>Shifting how organizations deliver results</h1>
+                <p>I help teams create inclusive, delightful services through culture change, strategic innovation, learning programs, and service design.</p>
                 <div class="cta-buttons">
                     <a href="#contact" class="btn-primary">Let's Connect</a>
                     <a href="#about" class="btn-secondary">Learn More About Me</a>
@@ -473,11 +473,11 @@
             <h2 class="section-title">About Me</h2>
             <p class="section-subtitle">Transforming digital capabilities across all sectors</p>
             <div class="about-content">
-                <p>With 20+ years of experience in service design innovation and digital transformation leadership, I help organizations and professionals at not-for-profits, in the private and public sectors evolve their digital capabilities while ensuring inclusive, client-centered experiences.</p>
+                <p>I've spent over 20 years helping all kinds of teams—from grassroots groups to government organizations—get better at serving people.</p>
                 
-                <p>My approach combines strategic vision with practical implementation, drawing on extensive experience across all sectors. I've led flagship programs that have served 10,000+ professionals, developed first-of-their-kind national digital learning initiatives, and been recognized by the Harvard Kennedy School of Government for contributions to digital service standards.</p>
+                <p>What I do is simple: I help organizations work smarter, not harder by improving how they collaborate and use technology. I make sure their systems are easy to use, fair for everyone and built around what people really need.</p>
                 
-                <p>I've developed frameworks that measurably improve client experiences, advance digital maturity, and foster inclusive organizational cultures across not-for-profits, private companies, and government agencies.</p>
+                <p>At the heart of it all, I am passionate about helping people grow their skills, tools and mindsets to thrive in our tech-enabled world.</p>
             </div>
         </div>
     </section>
